[Fronted] Add bus routes list page, and provide delete function.

--- a/ShuttleBus.Protal/app/views/user/editUserInfo.html
+++ b/ShuttleBus.Protal/app/views/user/editUserInfo.html
@@ -38,8 +38,8 @@
         </div>
         <div class="panel-footer">
             <div class="row">
-                <button class="btn btn-primary pull-right" ng-click="vm.cancel()">Cancel</button>
-                <button class="btn btn-primary pull-right" ng-disabled="!userInfoForm.$valid" ng-click="vm.update()">Update</button>
+                <button class="btn btn-primary pull-right" style="margin: 0 10px 0 10px;" ng-click="vm.cancel()">Cancel</button>
+                <button class="btn btn-primary pull-right" style="margin: 0 10px 0 10px;" ng-disabled="!userInfoForm.$valid" ng-click="vm.update()">Update</button>
             </div>
         </div>
     </div>
