--- a/ShuttleBus.Protal/app/styles/style.css
+++ b/ShuttleBus.Protal/app/styles/style.css
@@ -3,7 +3,6 @@
     padding: 40px 40px;
 }
 
-
 /*
  * Card component
  */
@@ -147,4 +146,15 @@
   color: #767676;
   text-align: center;
   border-top: 1px solid #e5e5e5;
+}
+
+.loadingImg {
+    width: 80px;
+    height: 70px;
+}
+
+.loading {
+    position: relative;
+    left: 40%;
+    top: 40%;
 }
