--- a/ShuttleBus.Protal/app/views/bus/bus.html
+++ b/ShuttleBus.Protal/app/views/bus/bus.html
@@ -12,37 +12,37 @@
             <div class="form-group">
                 <label class="col-sm-3 control-label">Bus Name:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Bus Name" ng-model="vm.bus.busName" required="">
+                    <input type="text" class="form-control" placeholder="Bus Name" ng-model="vm.bus.busName" required="" ng-readonly="vm.model === 'detail'">
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Description:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Description" ng-model="vm.bus.busDes" required="">
+                    <input type="text" class="form-control" placeholder="Description" ng-model="vm.bus.busDes" required="" ng-readonly="vm.model === 'detail'">
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Number:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Number" ng-model="vm.bus.busNumber" required="">
+                    <input type="text" class="form-control" placeholder="Number" ng-model="vm.bus.busNumber" required="" ng-readonly="vm.model === 'detail'">
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Owner:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Owner" ng-model="vm.bus.busOwner">
+                    <input type="text" class="form-control" placeholder="Owner" ng-model="vm.bus.busOwner" ng-readonly="vm.model === 'detail'">
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Phone Number:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Phone Number" ng-model="vm.bus.busOwnerNumber">
+                    <input type="text" class="form-control" placeholder="Phone Number" ng-model="vm.bus.busOwnerNumber" ng-readonly="vm.model === 'detail'">
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Status:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" placeholder="Status" ng-model="vm.bus.busStatus">
+                    <input type="text" class="form-control" placeholder="Status" ng-model="vm.bus.busStatus" ng-readonly="vm.model === 'detail'">
                 </div>
             </div>
         </div>
