--- a/ShuttleBus.Protal/app/views/user/editUserInfo.html
+++ b/ShuttleBus.Protal/app/views/user/editUserInfo.html
@@ -13,7 +13,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">User Name:</label>
                     <div class="col-sm-8">
-                        <label>{{vm.userInfo.userName}}</label>
+                        <input type="text" class="form-control" placeholder="Fist Name" ng-model="userInfo.userName" required="" readonly="">
                     </div>
                 </div>
                 <div class="form-group">
